<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.kornel_ius.passwordchecker.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputTextView"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="clear"
            android:text="C"
            android:textColor="@color/black"
            android:textSize="32sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/lengthPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lengthPassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lowerCasePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowerCasePassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/upperCasePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upperCasePassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberPassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/symbolPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbolPassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>
